
* `Numeric`

    * Incompatible changes:

        * `Numeric#step` now returns an instance of
          `Enumerator::ArithmeticSequence` class rather than one of
          `Enumerator` class.

* `Proc`

    * Incompatible changes:

        * `Proc#call` doesn't change `$SAFE` any more.  [Feature #14250]

* `Random`

    * New methods:

        * added `Random.bytes`.  [Feature #4938]

* `Range`

    * Incompatible changes:

        * `Range#===` now uses `#cover?` instead of `#include?` method.
          [Feature #14575]
        * `Range#cover?` now accepts Range object. [Feature #14473]
        * `Range#step` now returns an instance of
          `Enumerator::ArithmeticSequence` class rather than one of
          `Enumerator` class.

* `RubyVM::AST`

    * New methods:

        * `RubyVM::AST.parse` parses a given string and returns AST nodes.
          [experimental]

        * `RubyVM::AST.parse_file` parses a given file and returns AST
          nodes.  [experimental]

* `String`

    * New features:

        * `String#split` yields each substring to the block if given.
          [Feature #4780]

* `Struct`

    * Modified methods:

        * `Struct#to_h` now maps keys and values to new keys and values
          by the block if given.  [Feature #15143]

    * Aliased method:

        * `Struct#filter` is a new alias for `Struct#select` [Feature #13784]

* `TracePoint`

    * New methods:

        * `TracePoint#parameters` [Feature #14694]

### Stdlib updates (outstanding ones only)

* `ERB`

    * New options:

        * Add `:trim_mode` and `:eoutvar` keyword arguments to `ERB.new`.
          Now non-keyword arguments other than first one are softly
          deprecated and will be removed when Ruby 2.5 becomes EOL.
          [Feature #14256]

        * erb command's `-S` option is deprecated, which will be removed in
          the next version.

* `FileUtils`

    * New method:

        * `FileUtils#cp_lr`.  [Feature #4189]

* `Matrix`

    * New methods:
